# dudu-platform-game

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  DEMO_GUIDE.md  DEMO_TESTING.md  DEPLOYMENT.md  README.md  bootstrap.py  build.py  build_simple.py  debug_joystick.py  level_patterns.py  main.py  main_android.py  pytest.ini  requirements-mobile.txt  requirements.txt  run_tests.py  test_joystick.py  test_setup.py  version.py
.docker/: Dockerfile  Dockerfile.android  docker-compose.android.yml
.github/workflows/: mobile-build.yml
imagens/elementos/: bolha.pdn
imagens/personagem/: 1.xcf
internal/engine/: difficulty.py  game.py  info.py  joystick.py  mod_loader.py  ranking.py  screen.py  state.py  title.py  video.py
internal/engine/game/: difficulty.py  draw.py  (+5 more)
internal/resources/: bullet.py  cache.py  explosion.py  extra_life.py  flag.py  generator.py  image.py  laser.py  lightning.py  missile.py  platform.py  player.py  powerup.py  spaceship.py
internal/utils/: constants.py  edition.py  functions.py
mods/: .gitkeep  README.md
run_build/: README.md  build.py  build_and_debug_android.py  build_and_run_android.py  build_android_release.py  build_apk_only.py  build_demo.py  build_linux.py  build_release.py  debug_android_adb.py  install_apk.py  run_android.py  run_android_direct.py  run_android_emulator.py  run_linux.py  runtime_hook_logging.py  test_android_setup.py  test_build.py
run_build/config/: build_android_docker.ps1  check_system.ps1  pyproject.toml  setup_wsl2.ps1
tests/: conftest.py  test_game_coverage_new_cases.py
tests/version/: test_version.py
(+80 files in other folders)
